...
import cache.types.NpcType
import editor.CacheEditorState
import editor.CacheSession
import editor.EditorTab

class NpcTab(private val editor: CacheEditorState) : EditorTab {
    override val title = "NPCs"

    override val hasUnsavedChanges: Boolean
        get() = form?.isDirty == true

    private var session: CacheSession? = null
    var repository: NpcRepository? by mutableStateOf(null)
...
